webapp_src/src/assets/style/pages/_appointment.scss
@use '../base' as base;

@mixin placeholder-on-focus {
  color: black;
  opacity: 0.8
}

.appointment-page {
  min-height: 100vh;
  padding-top: 140px;
  padding-bottom: 70px;

  form {
    input {
      width: 100%;
      height: 48px;
      border-radius: 5px;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      -ms-border-radius: 5px;
      -o-border-radius: 5px;
      border: none;
      padding-left: 20px;
      margin-bottom: 20px;
      font-size: 16px;
      -webkit-transition: all 0.3s;
      -webkit-transition: 0.3s;
      -o-transition: 0.3s;
      transition: 0.3s;
      border: 1px solid base.$black-1;
      box-shadow: none!important;

      &:hover{
        border: 1px solid base.$primary-2;
      }

      &:focus {
        border: 1px solid base.$primary-2;
        &::-webkit-input-placeholder {
          color: black;
          opacity: 1
        }
        &::-moz-placeholder {
          @include placeholder-on-focus
        }
        &:-ms-input-placeholder {
          color: black;
          opacity: 1
        }
        &:-o-input-placeholder {
          color: black;
          opacity: 1
        }
      }

      &.wrong-input {
        border: 1px solid rgb(220,53,69);
      }
    }

    .country-span {
      margin-bottom: 20px;
    }
    .form-select {
      width: 100%;
      height: 48px!important;
      border-radius: 5px;
      border: none;
      padding-left: 20px;
      margin-bottom: 20px;
      font-size: 16px;
      -webkit-transition: all 0.3s;
      -webkit-transition: 0.3s;
      -o-transition: 0.3s;
      transition: 0.3s;
      border: 1px solid base.$black-1;
      &:hover{
        border: 1px solid base.$primary-2;
      }

      &:focus {
        border: 1px solid base.$primary-2;
        box-shadow: none;
      }
    }
    
    textarea {
      width: 100%;
      border-radius: 5px;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      -ms-border-radius: 5px;
      -o-border-radius: 5px;
      border: none;
      padding-left: 20px;
      margin-bottom: 20px;
      font-size: 16px;
      -webkit-transition: all 0.3s;
      -webkit-transition: 0.3s;
      -o-transition: 0.3s;
      transition: 0.3s;
      border: 1px solid base.$black-1;
      box-shadow: none!important;

      &:hover{
        border: 1px solid base.$primary-2;
      }

      &:focus {
        border: 1px solid base.$primary-2;

        &::-webkit-input-placeholder {
          color: black;
          opacity: 1
        }
        &::-moz-placeholder {
          @include placeholder-on-focus
        }
        &:-ms-input-placeholder {
          color: black;
          opacity: 1
        }
        &:-o-input-placeholder {
          color: black;
          opacity: 1
        }
      }

      &.wrong-input {
        border: 1px solid rgb(220,53,69);
      }
    }

    .react-datepicker-ignore-onclickoutside {
      border: none;
      &:focus {
        border: 1px solid base.$primary-2!important;
        &::-webkit-input-placeholder {
          color: black;
          opacity: 1
        }
        &::-moz-placeholder {
          @include placeholder-on-focus
        }
        &:-ms-input-placeholder {
          color: black;
          opacity: 1
        }
        &:-o-input-placeholder {
          color: black;
          opacity: 1
        }
      }
    }

    .slots {
      display: flex;
      justify-content: space-between;
      padding: 14px 0px;
      box-sizing: border-box;
      background: #fff;
      border-radius: 20px;
      align-items: center;
      flex-wrap: wrap;
      overflow: none;
      position: relative;

      .title {
        font-size: 16px;
        font-weight: 500;
        -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
        margin-bottom: 20px;
        color: #212529;
        font-weight: 400;
      }

      .slot {
        cursor: pointer;
        margin-bottom: 12px;
        width: 48.5%;

        .slot-content {
          display: flex;
          padding: 30px;
          box-sizing: border-box;
          border: 2px solid #e1e2e7;
          border-radius: 10px;
          -webkit-transition: -webkit-box-shadow 0.4s;
          transition: -webkit-box-shadow 0.4s;
          -o-transition: box-shadow 0.4s;
          transition: box-shadow 0.4s;
          transition: box-shadow 0.4s, -webkit-box-shadow 0.4s;
          position: relative;

          &:hover {
            -webkit-box-shadow: 0px 3px 5px 0px #e8e8e8;
            box-shadow: 0px 3px 5px 0px #e8e8e8;
            border: 2px solid base.$primary-2;
            transition: ease-in 0.3s;
            -webkit-transition: ease-in 0.3s;
            -moz-transition: ease-in 0.3s;
            -ms-transition: ease-in 0.3s;
            -o-transition: ease-in 0.3s;
          }

          &::after {
            content: "";
          }

          &.disabled {
            border: 2px solid black;
            background: #9599a8;
          }
        }

        .slot-details span {
          margin-bottom: 10px;
          display: block;
          font-size: 20px;
          line-height: 24px;
          color: #252f42;
        }

        .slot-details p {
          color: #646a79;
          font-size: 14px;
          line-height: 18px;
        }
      }

      .slot input[type="radio"] {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        width: 100%;
        opacity: 0;
      }

      .slot input[type="radio"]:checked + .slot-content::after {
        content: "";
        position: absolute;
        height: 8px;
        width: 8px;
        background: base.$primary-2;
        right: 20px;
        top: 20px;
        border-radius: 100%;
        border: 3px solid #fff;
        -webkit-box-shadow: 0px 0px 0px 2px base.$primary-2;
        box-shadow: 0px 0px 0px 2px base.$primary-2;
      }

      .slot input[type="radio"]:checked + .slot-content {
        border: 2px solid base.$primary-2;
        background: #eaf1fe;
        -webkit-transition: ease-in 0.3s;
        -o-transition: ease-in 0.3s;
        transition: ease-in 0.3s;
      }
    }
    
    @media screen and (max-width: 991px) {
      .slots {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-align: start;
        -ms-flex-align: start;
        align-items: flex-start;

        .slot {
          width: 100%;

          .slot-content .slot-details {
            width: 70%;
            display: inline-block;
          }
        }

        .slot input[type="radio"]:checked + .slot-content::after {
          top: 45%;
          -webkit-transform: translate(-50%);
          -ms-transform: translate(-50%);
          transform: translate(-50%);
        }
      }
    }
    
    @media screen and (max-width: 767px) {
      .slots {
        .slot {
          padding-bottom: 16px;
          
          .slot-content .slot-details {
            width: 100%;
            display: inline-block;
          }
        }
      }
    }
    
    @media screen and (max-width: 540px) {
      .slots {
        .slot {
          .slot-content {
            padding: 20px;
            -webkit-box-orient: vertical;
            -webkit-box-direction: normal;
            -ms-flex-direction: column;
            flex-direction: column;
            -webkit-box-align: baseline;
            -ms-flex-align: baseline;
            align-items: baseline;
            .slot-details {
              width: 100%;
            }
          }
        }
      }

      .slots .slot input[type="radio"]:checked + .slot-content::after {
        top: 20px;
        right: 10px;
      }
    }

    .form-text {
      margin-top: 0!important;
    }

    input:focus input::-webkit-input-placeholder, input::-moz-placeholder, input:-ms-input-placeholder, input:-o-input-placeholder {
      color: black;
      opacity: 1
    }

    .primary-button {
      width: 100%;
    }
  }
}

